@@ -2,6 +2,9 @@ Note: this log is only for notes post-1.0-conversion
 
 Version 3.0.6
 ------------------------------------------------------------------
+22 February 2007
++ Fixed email bug.
+
 19 February 2007
 + Added translate call.
 
